# RUST-ANGULAR.20-MSSQL

./: README.md
angular20/src/app/: app.config.ts
rust_mssql/: .env  Cargo.toml  api.rs  utils.rs
rust_mssql/migrations/: 20251203013237_create_users_table.sql  20251203013248_create_products_table.sql
rust_mssql/src/: main.rs
rust_mssql/src/api/: mod.rs
rust_mssql/src/api/auth/: activatemfa.rs  login.rs  mod.rs  register.rs  verifyotp.rs
rust_mssql/src/api/products/: list.rs  mod.rs  search.rs
rust_mssql/src/api/users/: changepassword.rs  getallusers.rs  getuserid.rs  mod.rs  updateprofile.rs  uploadpicture.rs
rust_mssql/src/models/: product.rs  user.rs
rust_mssql/src/utils/: authorization.rs  claims.rs  hasher.rs  jwt.rs  mod.rs  verify.rs
rust_mssql/templates/: index.csr.html  index.html  main.js  mfa.css.map  polyfills.js  polyfills.js.map
rust_mssql/templates/about/: index.html
rust_mssql/templates/contact/: index.html
rust_mssql/templates/productcatalog/: index.html
rust_mssql/templates/productlist/: index.html
rust_mssql/templates/productsearch/: index.html
rust_mssql/templates/profile/: index.html
rust_mssql/templates/server/: angular-app-manifest.mjs  main.server.mjs  polyfills.server.mjs  polyfills.server.mjs.map  server.mjs  server.mjs.map
rust_mssql/templates/server/assets-chunks/: about_index_html.mjs  contact_index_html.mjs  index_html.mjs  productcatalog_index_html.mjs  productlist_index_html.mjs  productsearch_index_html.mjs  profile_index_html.mjs  static_index_html.mjs
rust_mssql/templates/static/: index.html
(+16 files in other folders)
