[package]
name = "rust_mssql"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4" 
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
dotenv = "0.15" # To load database URL from a .env file
reqwest = "0.12.24"
argon2 = "0.5.3"
rand_core = "0.9.3"
askama = "0.14.0"
bcrypt = "0.17.1"
anyhow = "1.0.100"
sqlx-core = "0.8.6"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
chrono = "0.4.42"
rand = "0.9.2"
totp-rs = { version = "^5.7.0", features = ["gen_secret", "otpauth", "qr"] }
base32 = "0.5.1"
base64 = "0.22.1"
multer = "3.1.0"
tower-http = { version = "0.6.7", features = ["cors", "limit", "fs"] } # For setting body limits
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
http = "1.4.0"
data-encoding = "2.9.0"
tiberius = { version = "0.12.3", default-features=false, features = ["rust_decimal", "rustls"] }
async-std = { version = "1.12", features = ["attributes"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
futures-util = "0.3.31"
futures = "0.3.31"
arc-swap = "1.7.1"
rust_decimal = { version = "1.29", features = ["serde", "std", "macros"] }
rust_decimal_macros = "1.29"
bigdecimal = "0.4"